# Finance-tracker-backend

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  api_docs.md
.github/workflows/: heroku-deploy.yml
migrations/: 0001_create_users.sql  0002_create_categories.sql  0003_create_transactions.sql  0004_create_admins.sql  0005_create_app_settings.sql  0006_alter_users_add_auth_fields.sql  0007_create_user_otp_codes.sql  0008_alter_user_otp_add_purpose.sql
src/: auth.rs  config.rs  db.rs  errors.rs  mailer.rs  main.rs  response.rs
src/dto/: auth.rs  category.rs  mod.rs  transaction.rs
src/models/: admin.rs  category.rs  mod.rs  setting.rs  transaction.rs  user.rs
src/repositories/: admin_repo.rs  category_repo.rs  mod.rs  otp_repo.rs  settings_repo.rs  transaction_repo.rs  user_repo.rs
src/routes/: auth.rs  categories.rs  health.rs  mod.rs  summary.rs  transactions.rs
src/routes/admin/: auth.rs  mod.rs  settings.rs  users.rs
src/services/: admin_auth_service.rs  admin_settings_service.rs  admin_user_service.rs  auth_service.rs  category_service.rs  google.rs  mod.rs  summary_service.rs  transaction_service.rs
